--- a/views/team.erb
+++ b/views/team.erb
@@ -5,7 +5,11 @@
   <title>Basketball Team</title>
  </head>
  <body>
- 
+
+   <form method="POST" action="/team">
+     <input type="text"/>
+     <input type="submit"/>
+   </form>
 
 
  </body>
