--- a/views/team.erb
+++ b/views/team.erb
@@ -7,12 +7,16 @@
  <body>
 
    <form method="POST" action="/team">
-     <input type="text"/>
+     <label>Team Name:<input type="text"/></label>
+     <label>Coach:<input type="text"/></label>
+     <label>Point Guard:<input type="text"/></label>
+     <label>Shooting Guard:<input type="text"/></label>
+     <label>Small Forward:<input type="text"/></label>
+     <label>Power Forward:<input type="text"/></label>
+     <label>Center:<input type="text"/></label>
      <input type="submit"/>
    </form>
 
 
  </body>
 </html>
-
-
