Automatically backed up by Learn

--- a/views/team.erb
+++ b/views/team.erb
@@ -14,7 +14,7 @@
      <label>Small Forward:<input type="text"/></label>
      <label>Power Forward:<input type="text"/></label>
      <label>Center:<input type="text"/></label>
-     <input type="submit"/>
+     <input id="Submit" type="submit"/>
    </form>
 
 
