Automatically backed up by Learn

--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -5,7 +5,16 @@
   <title>Basketball Team Signup</title>
  </head>
  <body>
+
+      <form method="POST" action="/team">
+        <label>Team Name:<input type="text"/></label>
+        <label>Coach:<input type="text"/></label>
+        <label>Point Guard:<input type="text"/></label>
+        <label>Shooting Guard:<input type="text"/></label>
+        <label>Small Forward:<input type="text"/></label>
+        <label>Power Forward:<input type="text"/></label>
+        <label>Center:<input type="text"/></label>
+        <input id="Submit" type="submit"/>
+      </form>
  </body>
 </html>
-
-
