--- a/views/team.erb
+++ b/views/team.erb
@@ -5,8 +5,13 @@
   <title>Basketball Team</title>
  </head>
  <body>
-
-
+   Team Name:<%=>
+   Coach:<%=>
+   Point Guard:<%=>
+   Shooting Guard:<%=>
+   Small Forward:<%=>
+   Center:<%=>
+   <input id="Submit" type="submit"/>
 
  </body>
 </html>
