--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -7,12 +7,12 @@
  <body>
 
       <form method="POST" action="/team">
-        <label>Team Name:<input type="text"/></label>
-        <label>Coach:<input type="text"/></label>
-        <label>Point Guard:<input type="text"/></label>
-        <label>Shooting Guard:<input type="text"/></label>
-        <label>Small Forward:<input type="text"/></label>
-        <label>Power Forward:<input type="text"/></label>
+        <label>Team Name:<input name="team_name" type="text"/></label>
+        <label>Coach:<input name="coach" type="text"/></label>
+        <label>Point Guard:<input name="point_guard" type="text"/></label>
+        <label>Shooting Guard:<input name="shooting_guard" type="text"/></label>
+        <label>Small Forward:<input name="small_forward" type="text"/></label>
+        <label>Power Forward:<input name="power_forward" type="text"/></label>
         <label>Center:<input type="text"/></label>
         <input id="Submit" type="submit"/>
       </form>
