--- a/views/team.erb
+++ b/views/team.erb
@@ -5,12 +5,12 @@
   <title>Basketball Team</title>
  </head>
  <body>
-   Team Name:<%=>
-   Coach:<%=>
-   Point Guard:<%=>
-   Shooting Guard:<%=>
-   Small Forward:<%=>
-   Center:<%=>
+   Team Name:<%= @team_name %>
+   Coach:<%= @coach %>
+   Point Guard:<%= @point_guard >
+   Shooting Guard:<%= @shooting >
+   Small Forward:<%=  @small >
+   Center:<%= @center >
    <input id="Submit" type="submit"/>
 
  </body>
