Automatically backed up by Learn

--- a/views/team.erb
+++ b/views/team.erb
@@ -8,8 +8,8 @@
    Team Name:<%= @team_name %>
    Coach:<%= @coach %>
    Point Guard:<%= @point_guard >
-   Shooting Guard:<%= @shooting >
-   Small Forward:<%=  @small >
+   Shooting Guard:<%= @shooting_guard >
+   Small Forward:<%=  @small_ forward>
    Center:<%= @center >
    <input id="Submit" type="submit"/>
 
