Automatically backed up by Learn

--- a/views/team.erb
+++ b/views/team.erb
@@ -9,7 +9,8 @@
    Coach:<%= @coach %>
    Point Guard:<%= @point_guard >
    Shooting Guard:<%= @shooting_guard >
-   Small Forward:<%=  @small_ forward>
+   Small Forward:<%=  @small_forward>
+   Small Forward:<%= @power_forward>
    Center:<%= @center >
    <input id="Submit" type="submit"/>
 
