--- a/views/team.erb
+++ b/views/team.erb
@@ -7,10 +7,10 @@
  <body>
    Team Name:<%= @team_name %>
    Coach:<%= @coach %>
-   Point Guard:<%= @point_guard >
-   Shooting Guard:<%= @shooting_guard >
-   Small Forward:<%=  @small_forward>
-   Small Forward:<%= @power_forward>
+   Point Guard:<%= @point_guard %>
+   Shooting Guard:<%= @shooting_guard %>
+   Small Forward:<%=  @small_forward%>
+   Small Forward:<%= @power_forward%>
    Center:<%= @center >
    <input id="Submit" type="submit"/>
 
