--- a/views/team.erb
+++ b/views/team.erb
@@ -10,7 +10,7 @@
    Point Guard:<%= @point_guard %>
    Shooting Guard:<%= @shooting_guard %>
    Small Forward:<%=  @small_forward%>
-   Small Forward:<%= @power_forward%>
+   Power Forward:<%= @power_forward%>
    Center:<%= @center >
    <input id="Submit" type="submit"/>
 
