--- a/views/team.erb
+++ b/views/team.erb
@@ -11,7 +11,7 @@
    Shooting Guard:<%=@shooting_guard %>
    Small Forward:<%= @small_forward%>
    Power Forward:<%= @power_forward%>
-   Center:<%= @center >
+   Center:<%= @center %>
    <input id="Submit" type="submit"/>
  </body>
 </html>
