Automatically backed up by Learn

--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -13,7 +13,7 @@
         <label>Shooting Guard:<input name="shooting_guard" type="text"/></label>
         <label>Small Forward:<input name="small_forward" type="text"/></label>
         <label>Power Forward:<input name="power_forward" type="text"/></label>
-        <label>Center:<input type="text"/></label>
+        <label>Center:<input name="center" type="text"/></label>
         <input id="Submit" type="submit"/>
       </form>
  </body>
