Automatically backed up by Learn

--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -7,7 +7,7 @@
  <body>
 
       <form method="POST" action="/team">
-        <label>Team Name:<input name="team_name" type="text"/></label>
+        <label>Team Name:</label><input name="team_name" type="text"/>
         <label>Coach:<input name="coach" type="text"/></label>
         <label>Point Guard:<input name="point_guard" type="text"/></label>
         <label>Shooting Guard:<input name="shooting_guard" type="text"/></label>
