Automatically backed up by Learn

--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -9,11 +9,16 @@
       <form method="POST" action="/team">
         <label>Team Name:</label><input name="team_name" type="text"/>
         <label>Coach:<input name="coach" type="text"/></label>
-        <label>Point Guard:<input name="point_guard" type="text"/></label>
-        <label>Shooting Guard:<input name="shooting_guard" type="text"/></label>
-        <label>Small Forward:<input name="small_forward" type="text"/></label>
-        <label>Power Forward:<input name="power_forward" type="text"/></label>
-        <label>Center:<input name="center" type="text"/></label>
+        <label>Point Guard:</label>
+        <input name="point_guard" type="text"/>
+        <label>Shooting Guard:</label>
+        <input name="shooting_guard" type="text"/>
+        <label>Small Forward:</label>
+        <input name="small_forward" type="text"/>
+        <label>Power Forward:</label>
+        <input name="power_forward" type="text"/>
+        <label>Center:</label>
+        <input name="center" type="text"/>
         <input id="Submit" type="submit"/>
       </form>
  </body>
