--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -5,7 +5,7 @@
   <title>Basketball Team Signup</title>
  </head>
  <body>
-
+      <h1>Create a basketball team!</h1>
       <form method="POST" action="/team">
         <label>Team Name:</label><input name="team_name" type="text"/>
         <label>Coach:<input name="coach" type="text"/></label>
